<resources>
    <string name="app_name">IAGDANILASM_1202150280_MODUL2</string>
    <string name="pilih_menu">Pilih Menu:</string>
    <string name="dine_in">Dine In</string>
    <string name="take_away">Take Away</string>
    <string name="pesan_sekarang">Pesan Sekarang</string>
    <string name="no_meja">No Meja:</string>
    <string name="detail_customer">Detail Customer:</string>
    <string name="pilih_pesanan">Pilih Pesanan</string>
    <string name="identitas_pemesanan">Identitas Pemesanan:</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="alamat">Alamat</string>
    <string name="catatan">Catatan</string>
    <string name="tiramisu_cake_20_000">Tiramisu Cake (20.000)</string>
    <string name="black_forest_cake_50_000">Black Forest Cake (50.000)</string>
    <string name="cheese_cake_45_000">Cheese Cake (45.000)</string>
    <string name="nothing_selected">nothing</string>
    <string-array name="labels_array">
        <item>Meja 1</item>
        <item>Meja 2</item>
        <item>Meja 3</item>
        <item>Meja 4</item>
        <item>Meja 5</item>
    </string-array>
</resources>
