<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.iagdanilasm_1202150280_modul2.TakeAwayActivity">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/identitas_pemesanan"
    android:text="@string/identitas_pemesanan"
    android:textSize="20sp"
    android:textAlignment="center"
    android:layout_gravity="center"
    android:layout_marginTop="10dp"
    android:textStyle="bold"
    />

    <EditText
        android:id="@+id/name"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textCapSentences"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:id="@+id/phone"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:inputType="phone"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:layout_width="180dp"
        android:id="@+id/alamat"
        android:layout_height="wrap_content"
        android:hint="@string/alamat"
        android:inputType="textCapSentences"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:hint="@string/catatan"
        android:inputType="textCapSentences"
        android:id="@+id/catatan"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pilih_pesanan"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:id="@+id/pilih_pesanan"
        android:onClick="onClickOrder"
        />
</LinearLayout>
