<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.iagdanilasm_1202150280_modul2.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/splash"
        android:gravity="center"
        android:id="@+id/splashscreen"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pilih_menu"
        android:textSize="25sp"
        android:id="@+id/pilihmenu"
        android:textAlignment="center"
        android:layout_gravity="center"
        />

    <RadioGroup
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/pilihmenu"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radiodinein"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margintop"
            android:onClick="onRadioButtonClickedDineIn"
            android:text="@string/dine_in"
            android:textAlignment="center" />

        <RadioButton
            android:id="@+id/radiotakeaway"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="@dimen/margintop"
            android:onClick="onRadioButtonClickedTakeAway"
            android:text="@string/take_away"
            android:textAlignment="center" />
    </RadioGroup>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pesan_sekarang"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="12dp"
        android:id="@+id/buttonpesan"
        android:onClick="onRadioButtonClicked"
        />

</LinearLayout>
