<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.example.android.iagdanilasm_1202150280_modul2.DineInActivity">

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/detail_customer"
    android:textAlignment="center"
    android:layout_gravity="center"
    android:layout_marginTop="20dp"
    android:textSize="20sp"
    android:textStyle="bold"
    android:id="@+id/detailcustomer"
    />

    <EditText
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/name"
        android:id="@+id/name"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/nomormeja"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="105dp"
            android:layout_marginTop="10dp"
            android:text="@string/no_meja" />

        <Spinner
            android:id="@+id/label_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"></Spinner>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:onClick="onClickOrder"
        android:padding="20dp"
        android:text="PILIH PESANAN"
        android:textColor="@color/colorAccent"

        app:layout_constraintTop_toBottomOf="@id/label_spinner"
                />
</LinearLayout>